--- a/3_Implementation/Makefile
+++ b/3_Implementation/Makefile
@@ -1,1 +1,11 @@
+SRC = employee_management.c\
+src/employee_management.c
+INC = inc
+employee_management.exe : $(SRC) 
+	gcc $^ -I$(INC) -o $@
 
+run : employee_management.exe
+	./employee_management.exe
+
+clean:
+	del employee_management.exe
